# roomba-v4

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: v4-api.md
native/: Makefile  mqtt_bridge.c
src/roomba_v4/: __init__.py  __main__.py  bridge.py  cloud.py  cloud_mqtt.py  discovery.py  rest.py  robot.py
tests/: conftest.py  test_bridge.py  test_cli.py  test_cloud.py  test_cloud_mqtt.py  test_discovery.py  test_rest.py  test_robot.py
tools/: analyze_captures.py  capture_api_flow.py  mitm_auth_capture.py  mitm_irobot.py
